methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:6: error: not enough arguments for method faireV: (c: java.awt.Color)Unit.
Unspecified value parameter c.
  avance();avance();gauche();faireV()
                                   ^